Fixing sign up alignment

--- a/src/sass/base/_breakpoints.scss
+++ b/src/sass/base/_breakpoints.scss
@@ -1,3 +1,3 @@
 $small-bp: 40em;
 $medium-bp: 50em;
-$large-bp: 67.5em;
+$large-bp: 67em;
